# JB-NetData-ServerMonitor

./: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: accent_tree.riv  tree.riv
src/lib/: Header.svelte  Unavailable.svelte
src/lib/example/footer/: Footer.svelte
src/lib/example/header/: Header.svelte
src/lib/stores/: windowStore.ts
src/styles/: app.scss
