[package]
name = "jet-black-server-monitor"
version = "0.1.1"
description = "A simple tauri app with empded iframe of netdata hosted on the server for diagnostic purposes."
authors = ["Fractal-Tess"]
license = "MIT"
repository = "https://github.com/Fractal-Tess/JB-NetData-ServerMonitor"
default-run = "jet-black-server-monitor"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/tauri-plugin-window-state", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", branch="dev" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["devtools", "shell-open", "window-close", "window-minimize", "window-start-dragging"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


[profile.release]
panic ='abort'
codegen-units= 1
lto = true
opt-level = 's'
